syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.uevora.sd.proto";
option java_outer_classname = "MetricsProto";

package metrics;

// El mensaje que envía el sensor
message MetricRequest {
  string deviceId = 1;
  double temperature = 2;
  double humidity = 3;
}

// La respuesta que devuelve el servidor
message MetricResponse {
  bool success = 1;
  string message = 2;
}

// El servicio (los métodos que se pueden llamar)
service MetricService {
  rpc sendMetric(MetricRequest) returns (MetricResponse);
}